--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,10 @@ Package: Lab4
 Type: Package
 Title: Multiple Regression Model
 Version: 1.0
-Date: 2023-10-02
+Date: 2023-10-28
 Author: SILA KILICOGLU (silki753@student.liu.se) and SAMI FURKAN YILDIRIM (samyi572@student.liu.se)
 Maintainer: SILA KILICOGLU <silakilicoglu@gmail.com>
-Description: Advance R Programming Lab 4 Assingment.
+Description: Advance R Programming Bonus Lab Assingment.
 License: GPL-2 | file LICENSE
 Encoding: UTF-8
 LazyData: true
