visualize airport delays added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,14 @@
 
 export(linreg)
 export(ridgereg)
+export(visualize_airport_delays)
 exportClasses(linreg)
 exportClasses(ridgereg)
+import(caret)
+import(dplyr)
 import(ggplot2)
-import(gridExtra)
+import(leaps)
+import(mlbench)
+import(nycflights13)
+importFrom(MASS,lm.ridge)
 importFrom(methods,new)
