--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,4 +18,4 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 VignetteBuilder: knitr
-Imports: methods, ggplot2, gridExtra
+Imports: methods, ggplot2, nycflights13, dplyr, mlbench, caret, leaps, MASS
